# voxel_raytracer

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  imgui.ini
.github/workflows/: build.yml
lib/FastNoiseLite/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/sqlite3/: CMakeLists.txt
shaders/: clear_blocks.comp  clear_texture.comp  random.hlsl  ray_trace.comp  raytrace.comp  render_blocks.comp  sample_texture.comp  set_blocks.comp  set_chunks.comp  shader.hlsl  update_blocks.comp  update_chunks.comp  update_heightmap.comp  world_set_blocks.comp  world_set_chunks.comp
src/: block.cpp  block.hpp  buffer.hpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  config.h  debug_group.cpp  debug_group.hpp  helpers.cpp  helpers.hpp  main.cpp  noise.cpp  noise.hpp  profile.hpp  threads.h  worker.cpp  worker.hpp  world.cpp  world.hpp
textures/: atlas.xcf
